# vuln-pkg

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  example-manifest.yml  install.ps1  install.sh  manifest.yml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  docker.rs  error.rs  main.rs  manifest.rs  output.rs  state.rs
