[package]
name = "vuln-pkg"
version = "0.1.0"
edition = "2024"
description = "A package manager for deliberately-vulnerable applications"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

# Docker
bollard = "0.18"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging and output
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2"

# Utilities
directories = "5"
futures = "0.3"

[profile.release]
lto = true
strip = true
opt-level = "z"
